# SE_api

./: CMakeLists.txt  Readme.md  build.sh  install_voro++.sh
doc/: developer_doc.odt
example/: PeriodicRVE.geo  distribution.cmd  foam_anis.geo  foam_simple.geo  test.cmd
se_cmd/: angle.cmd  default.cmd  demo.sh  dumpgeo.cmd  dumpgeoNow.cmd  foam_analyzator.cmd  stl.cmd
src/: CMakeLists.txt  Makefile  converter.cpp  converter.hpp  converter_an.cpp  converter_generator.cpp  converter_io.cpp  converter_linalg.cpp  converter_mod.cpp  converter_modRaw.cpp  finalStyleEdit.sh  main.cpp  structure.hpp
