include_directories(/usr/local/include/voro++)
set (CMAKE_CXX_FLAGS "-O3")
file (GLOB _sources *.c*)
add_executable(se_api ${_sources})
target_link_libraries(se_api /usr/local/lib/libvoro++.a)
target_link_libraries (se_api boost_program_options)
target_link_libraries (se_api boost_system)
target_link_libraries (se_api boost_filesystem)
